--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,7 @@
             <a mat-list-item (click)="onSelChange(c); drawer.toggle()" [ngClass]="c === actualGameCharacter ? 'selected' : 'unselected'">
                 <mat-icon aria-label="face">face</mat-icon>
                 <mat-label style="padding-left: 5%">{{ c.name }}</mat-label>
-                <button class="edit-char-button" mat-icon-button (click)="editCharacter($event, c); drawer.toggle()">
+                <button class="edit-char-button" mat-icon-button (click)="editRoutine(drawer, $event, c)">
                     <mat-icon>edit</mat-icon>
                 </button>
             </a>
