Selezionati che funzionano anche richiudendo

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -90,7 +90,8 @@
                             </button>
                         </div>
                     </div>
-                    <mat-list-option [ngClass]="buff.combat_list ? 'option-row' : 'hidden-option-row'" checkboxPosition="before" [value]="buff">
+                    <mat-list-option [ngClass]="buff.combat_list ? 'option-row' : 'hidden-option-row'" checkboxPosition="before"
+                                     [value]="buff">
                         <div style="display:flex; justify-content:space-between;align-items:center">
                             <div style="display:flex;align-items:center">
                                 <div style="display:flex; flex-direction:column">
@@ -146,7 +147,8 @@
                             </button>
                         </div>
                     </div>
-                    <mat-list-option [ngClass]="buff.ac_list ? 'option-row' : 'hidden-option-row'" checkboxPosition="before" [value]="buff">
+                    <mat-list-option [ngClass]="buff.ac_list ? 'option-row' : 'hidden-option-row'" checkboxPosition="before"
+                                     [value]="buff">
                         <div style="display:flex; justify-content:space-between;align-items:center">
                             <div style="display:flex;align-items:center">
                                 <div style="display:flex; flex-direction:column">
@@ -232,7 +234,8 @@
                             </button>
                         </div>
                     </div>
-                    <mat-list-option [ngClass]="buff.st_list ? 'option-row' : 'hidden-option-row'" checkboxPosition="before" [value]="buff">
+                    <mat-list-option [ngClass]="buff.st_list ? 'option-row' : 'hidden-option-row'" checkboxPosition="before"
+                                     [value]="buff">
                         <div style="display:flex; justify-content:space-between;align-items:center">
                             <div style="display:flex;align-items:center">
                                 <div style="display:flex; flex-direction:column">
