--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -75,3 +75,43 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 }
+
+@import '~@angular/material/theming';
+// Plus imports for other components in your app.
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$candy-app-primary: mat-palette($mat-brown, 900);
+$candy-app-accent:  mat-palette($mat-orange, 500);
+
+// The warn palette is optional (defaults to red).
+$candy-app-warn:    mat-palette($mat-red, 900);
+
+// Create the theme object (a Sass map containing all of the palettes).
+$candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
+
+$candy-app-primary-dark: mat-palette($mat-blue-gray, 100);
+$candy-app-accent-dark:  mat-palette($mat-green, 500);
+
+// The warn palette is optional (defaults to red).
+$candy-app-warn-dark: mat-palette($mat-red, 900);
+
+$candy-app-theme-dark: mat-dark-theme($candy-app-primary-dark, $candy-app-accent-dark, $candy-app-warn-dark);
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+
+@media (prefers-color-scheme: light) {
+  @include angular-material-theme($candy-app-theme);
+}
+
+@media (prefers-color-scheme: dark) {
+  @include angular-material-theme($candy-app-theme-dark);
+}
+
