--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -86,20 +86,15 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$candy-app-primary: mat-palette($mat-brown, 900);
+$candy-app-primary: mat-palette($mat-red, 900);
 $candy-app-accent:  mat-palette($mat-orange, 500);
+$candy-app-warn:    mat-palette($mat-gray, 900);
 
-// The warn palette is optional (defaults to red).
-$candy-app-warn:    mat-palette($mat-red, 900);
-
-// Create the theme object (a Sass map containing all of the palettes).
 $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
 
-$candy-app-primary-dark: mat-palette($mat-blue-gray, 100);
-$candy-app-accent-dark:  mat-palette($mat-green, 500);
-
-// The warn palette is optional (defaults to red).
-$candy-app-warn-dark: mat-palette($mat-red, 900);
+$candy-app-primary-dark: mat-palette($mat-grey, 700);
+$candy-app-accent-dark:  mat-palette($mat-red, 900);
+$candy-app-warn-dark: mat-palette($mat-amber);
 
 $candy-app-theme-dark: mat-dark-theme($candy-app-primary-dark, $candy-app-accent-dark, $candy-app-warn-dark);
 
