--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -83,18 +83,51 @@
 // Be sure that you only ever include this mixin once!
 @include mat-core();
 
+$custom-red: (
+        50: #ffffff,
+        100: #dde6f3,
+        200: #b4c9e4,
+        300: #7fa3d1,
+        400: #6992c9,
+        500: #5282c1,
+        600: #4072b4,
+        700: #38649d,
+        800: #305687,
+        900: #870000,
+        A100: #ffffff,
+        A200: #dde6f3,
+        A400: #6992c9,
+        A700: #38649d,
+        contrast: (
+                50: $black-87-opacity,
+                100: $black-87-opacity,
+                200: $black-87-opacity,
+                300: $black-87-opacity,
+                400: $black-87-opacity,
+                500: white,
+                600: white,
+                700: white,
+                800: white,
+                900: white,
+                A100: $black-87-opacity,
+                A200: $black-87-opacity,
+                A400: $black-87-opacity,
+                A700: white,
+        )
+);
+
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$candy-app-primary: mat-palette($mat-red, 900);
-$candy-app-accent:  mat-palette($mat-orange, 500);
+$candy-app-primary: mat-palette($custom-red, 900);
+$candy-app-accent:  mat-palette($mat-amber, 600);
 $candy-app-warn:    mat-palette($mat-gray, 900);
 
 $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
 
 $candy-app-primary-dark: mat-palette($mat-grey, 700);
-$candy-app-accent-dark:  mat-palette($mat-red, 900);
-$candy-app-warn-dark: mat-palette($mat-amber);
+$candy-app-accent-dark:  mat-palette($mat-blue, 800);
+$candy-app-warn-dark: mat-palette($mat-grey, 200);
 
 $candy-app-theme-dark: mat-dark-theme($candy-app-primary-dark, $candy-app-accent-dark, $candy-app-warn-dark);
 
